3 Ano/2 Semestre/LFA/Projeto/safelang-lfa-p4g1/src/.antlr/SafelangParser.java
// Generated from /home/paulo/Desktop/LFA_projeto/safelang-lfa-p4g1/src/Safelang.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SafelangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, MULTLINECOMMENT=45, 
		COMMENT=46, NEWLINE=47, StringLiteral=48, READ=49, WRITE=50, WRITELN=51, 
		TYPECMD=52, UNITCMD=53, FORMATCMD=54, LENGTHCMD=55, ASSERTCMD=56, FAILCMD=57, 
		WS=58, TYPESTR=59, TYPEINT=60, TYPEREAL=61, TYPEBOOL=62, TRUEKEY=63, FALSEKEY=64, 
		ID=65, NumberDecimal=66, NumberScientific=67, IntegerLiteral=68;
	public static final int
		RULE_program = 0, RULE_stat = 1, RULE_commonStat = 2, RULE_fail = 3, RULE_write = 4, 
		RULE_assign = 5, RULE_type = 6, RULE_if = 7, RULE_else = 8, RULE_try = 9, 
		RULE_rescue = 10, RULE_for = 11, RULE_while = 12, RULE_assert = 13, RULE_listadd = 14, 
		RULE_type_def_expr = 15, RULE_expr = 16, RULE_string = 17, RULE_number = 18, 
		RULE_booleans = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "stat", "commonStat", "fail", "write", "assign", "type", "if", 
			"else", "try", "rescue", "for", "while", "assert", "listadd", "type_def_expr", 
			"expr", "string", "number", "booleans"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "':='", "':'", "':=?'", "'new'", "'list'", "'['", "']'", 
			"','", "']:='", "'if'", "'then'", "'end'", "'elseif'", "'else'", "'try'", 
			"'rescue'", "'retry'", "'for'", "'to'", "'do'", "'while'", "'until'", 
			"'>>'", "'*'", "'/'", "'('", "'\"left\"'", "'\"center\"'", "'\"right\"'", 
			"')'", "'//'", "'\\\\'", "'+'", "'-'", "'not'", "'='", "'<'", "'>'", 
			"'<='", "'>='", "'<>'", "'and'", "'or'", null, null, null, null, "'read'", 
			"'write'", "'writeln'", "'type'", "'unit'", "'format'", "'length'", "'assert'", 
			"'fail'", null, "'string'", "'integer'", "'real'", "'boolean'", "'true'", 
			"'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "MULTLINECOMMENT", 
			"COMMENT", "NEWLINE", "StringLiteral", "READ", "WRITE", "WRITELN", "TYPECMD", 
			"UNITCMD", "FORMATCMD", "LENGTHCMD", "ASSERTCMD", "FAILCMD", "WS", "TYPESTR", 
			"TYPEINT", "TYPEREAL", "TYPEBOOL", "TRUEKEY", "FALSEKEY", "ID", "NumberDecimal", 
			"NumberScientific", "IntegerLiteral"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Safelang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SafelangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SafelangParser.EOF, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(40);
					stat();
					setState(41);
					match(T__0);
					}
					} 
				}
				setState(47);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 11)) & ~0x3f) == 0 && ((1L << (_la - 11)) & 285837701469509921L) != 0)) {
				{
				setState(48);
				stat();
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(49);
					match(T__0);
					}
				}

				}
			}

			setState(54);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatContext extends ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	 
		public StatContext() { }
		public void copyFrom(StatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatForContext extends StatContext {
		public ForContext for_() {
			return getRuleContext(ForContext.class,0);
		}
		public StatForContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).enterStatFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).exitStatFor(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatIfContext extends StatContext {
		public IfContext if_() {
			return getRuleContext(IfContext.class,0);
		}
		public StatIfContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).enterStatIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).exitStatIf(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatTryContext extends StatContext {
		public TryContext try_() {
			return getRuleContext(TryContext.class,0);
		}
		public StatTryContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).enterStatTry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).exitStatTry(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatAssertContext extends StatContext {
		public AssertContext assert_() {
			return getRuleContext(AssertContext.class,0);
		}
		public StatAssertContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).enterStatAssert(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).exitStatAssert(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatExprContext extends StatContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public StatExprContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).enterStatExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).exitStatExpr(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatTypeContext extends StatContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public StatTypeContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).enterStatType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).exitStatType(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatListAddContext extends StatContext {
		public ListaddContext listadd() {
			return getRuleContext(ListaddContext.class,0);
		}
		public StatListAddContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).enterStatListAdd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).exitStatListAdd(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatWhileContext extends StatContext {
		public WhileContext while_() {
			return getRuleContext(WhileContext.class,0);
		}
		public StatWhileContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).enterStatWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).exitStatWhile(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatFailContext extends StatContext {
		public FailContext fail() {
			return getRuleContext(FailContext.class,0);
		}
		public StatFailContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).enterStatFail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).exitStatFail(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatWriteContext extends StatContext {
		public WriteContext write() {
			return getRuleContext(WriteContext.class,0);
		}
		public StatWriteContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).enterStatWrite(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).exitStatWrite(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatAssignContext extends StatContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public StatAssignContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).enterStatAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).exitStatAssign(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		try {
			setState(67);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new StatAssignContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				assign();
				}
				break;
			case 2:
				_localctx = new StatWriteContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				write();
				}
				break;
			case 3:
				_localctx = new StatExprContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(58);
				expr(0);
				}
				break;
			case 4:
				_localctx = new StatTypeContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(59);
				type();
				}
				break;
			case 5:
				_localctx = new StatIfContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(60);
				if_();
				}
				break;
			case 6:
				_localctx = new StatTryContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(61);
				try_();
				}
				break;
			case 7:
				_localctx = new StatForContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(62);
				for_();
				}
				break;
			case 8:
				_localctx = new StatWhileContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(63);
				while_();
				}
				break;
			case 9:
				_localctx = new StatAssertContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(64);
				assert_();
				}
				break;
			case 10:
				_localctx = new StatListAddContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(65);
				listadd();
				}
				break;
			case 11:
				_localctx = new StatFailContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(66);
				fail();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommonStatContext extends ParserRuleContext {
		public CommonStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commonStat; }
	 
		public CommonStatContext() { }
		public void copyFrom(CommonStatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CommonStatFailContext extends CommonStatContext {
		public FailContext fail() {
			return getRuleContext(FailContext.class,0);
		}
		public CommonStatFailContext(CommonStatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).enterCommonStatFail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).exitCommonStatFail(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CommonStatWriteContext extends CommonStatContext {
		public WriteContext write() {
			return getRuleContext(WriteContext.class,0);
		}
		public CommonStatWriteContext(CommonStatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).enterCommonStatWrite(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).exitCommonStatWrite(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CommonStatForContext extends CommonStatContext {
		public ForContext for_() {
			return getRuleContext(ForContext.class,0);
		}
		public CommonStatForContext(CommonStatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).enterCommonStatFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).exitCommonStatFor(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CommonStatTryContext extends CommonStatContext {
		public TryContext try_() {
			return getRuleContext(TryContext.class,0);
		}
		public CommonStatTryContext(CommonStatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).enterCommonStatTry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).exitCommonStatTry(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CommonStatAssertContext extends CommonStatContext {
		public AssertContext assert_() {
			return getRuleContext(AssertContext.class,0);
		}
		public CommonStatAssertContext(CommonStatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).enterCommonStatAssert(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).exitCommonStatAssert(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CommonStatExprContext extends CommonStatContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public CommonStatExprContext(CommonStatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).enterCommonStatExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).exitCommonStatExpr(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CommonStatWhileContext extends CommonStatContext {
		public WhileContext while_() {
			return getRuleContext(WhileContext.class,0);
		}
		public CommonStatWhileContext(CommonStatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).enterCommonStatWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).exitCommonStatWhile(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CommonStatListAddContext extends CommonStatContext {
		public ListaddContext listadd() {
			return getRuleContext(ListaddContext.class,0);
		}
		public CommonStatListAddContext(CommonStatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).enterCommonStatListAdd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).exitCommonStatListAdd(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CommonStatAssignContext extends CommonStatContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public CommonStatAssignContext(CommonStatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).enterCommonStatAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).exitCommonStatAssign(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CommonStatIfContext extends CommonStatContext {
		public IfContext if_() {
			return getRuleContext(IfContext.class,0);
		}
		public CommonStatIfContext(CommonStatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).enterCommonStatIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SafelangListener ) ((SafelangListener)listener).exitCommonStatIf(this);
		}
	}
